# slicer-api

./: .dockerignore  .gitignore  .gitmodules  COPILOT_CONTEXT.md  Dockerfile  Dockerfile.node-api.dev  Makefile  README.md  benchy_out.3mf  benchy_out.b64  docker-compose.node-api.dev.yml  output.3mf  output.b64  package.json
.github/workflows/: .node-prebuilds.yml  ci.yml  cli-build.yml  docker-images.yml  ghcr-orcaslicer-build-deps.yml  ghcr-retag.yml  node-prebuilds.yml
.orcaslicercli/: OrcaSlicer.conf
.orcaslicercli/tmp/orcaslicer_model/Tue_Sep_16/17_59_08#55895#6/: _temp_3.config
.orcaslicercli/tmp/orcaslicer_model/Tue_Sep_16/18_54_51#61150#6/: _temp_1.config
.orcaslicercli/tmp/orcaslicer_model/Tue_Sep_16/20_17_45#72411#6/: _temp_3.config
OrcaSlicerCli/: CMakeLists.txt  README.md  README_PROFILES.md  test_3mf_production.sh  test_3mf_production_modified.sh  test_compare.sh  test_diff_strict.sh  test_slice.sh
OrcaSlicerCli/bindings/node/: CMakeLists.txt  README.md  index.js  package-lock.json  package.json
OrcaSlicerCli/bindings/node/scripts/: stage-prebuild.js
OrcaSlicerCli/bindings/node/src/: addon.cc
OrcaSlicerCli/bindings/node/test/: e2e.js  options.js  slice_compare.js  smoke.js  unit.js
OrcaSlicerCli/bindings/node/types/: index.d.ts
OrcaSlicerCli/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
OrcaSlicerCli/build-ninja/src/: cmake_install.cmake
OrcaSlicerCli/docs/: DEVELOPMENT.md
OrcaSlicerCli/examples/: basic_usage.md  sample_config.ini  slice_with_profiles.cpp
OrcaSlicerCli/scripts/: build.bat  build.sh  dev.sh  test_build.sh
OrcaSlicerCli/src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  nanosvg_impl.cpp
OrcaSlicerCli/src/core/: CliCore.cpp  CliCore.hpp
OrcaSlicerCli/src/engine/: EngineAPI.cpp  EngineAPI.hpp
OrcaSlicerCli/src/utils/: ArgumentParser.cpp  ArgumentParser.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Logger.cpp  Logger.hpp
OrcaSlicerCli/tools/: compare_gcode_strict.py  extract_after_config.py
comparable_files/: 3DBenchy.gcode  3DBenchy_plate_1.gcode  3DBenchy_plate_1.gcode.3mf  3DBenchy_plate_1_modified.gcode  3DBenchy_plate_1_modified.gcode.3mf  3DBenchy_plate_2.gcode.3mf
docs/: OVERRIDES.md
example_files/: 3DBenchy.3mf  3DBenchy_modified.3mf
go-api/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main_test.go
go-api/cmd/server/: main.go
go-api/docs/: docs.go  swagger.json  swagger.yaml
go-api/internal/config/: config.go
go-api/internal/domain/: common.go  system.go
go-api/internal/handlers/: system_handler.go
go-api/internal/middleware/: middleware.go
go-api/internal/services/: system_service.go
go-api/pkg/errors/: errors.go
go-api/pkg/logger/: logger.go
node-api/: .eslintrc.cjs  .mocharc.json  Dockerfile  README_IMPLEMENTATION.md  eslint.config.cjs  nodemon.json  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.test.json
node-api/docs/: filament-data-normalization.md  profile-comparison.md
node-api/examples/: profile-comparison-example.js
node-api/native/orcaslicer_core/: CMakeLists.txt  addon.cc  orca_minimal.cpp
node-api/public/: index.html
node-api/scripts/: build-addon.js  smoke-index.ts  smoke-slicer.ts  validate-profiles.js
node-api/src/: app.ts  client.ts  declarations.ts  logger.ts  orca.ts
node-api/src/config/: app-config.ts
node-api/src/errors/: custom-errors.ts
node-api/src/hooks/: file-upload.ts  log-error.ts
node-api/src/routes/: plates.ts
node-api/src/services/: index.ts
node-api/src/services/filaments-profile/: filament-config-types.ts  filament-data-normalizer.ts  filaments-profile.class.ts  filaments-profile.schema.ts  filaments-profile.shared.ts  filaments-profile.ts  profile-inheritance-resolver.ts
node-api/src/services/healthcheck/: healthcheck.class.ts  healthcheck.schema.ts  healthcheck.shared.ts  healthcheck.ts
node-api/src/services/printer-profiles/: printer-profiles.class.ts  printer-profiles.schema.ts  printer-profiles.shared.ts  printer-profiles.ts
node-api/src/services/profile-converter/: profile-converter.class.ts  profile-converter.schema.ts  profile-converter.shared.ts  profile-converter.ts
node-api/src/services/validation/: validation.class.ts  validation.schema.ts  validation.shared.ts  validation.ts
node-api/src/types/: common.ts  slicer.ts
node-api/src/utils/: 3mf-processor.ts  file-upload-handler.ts  input-validator.ts  profile-base-path.ts  profile-file-manager.ts  profile-normalizer.ts  profile-placeholders.ts  security-validator.ts
node-api/test/: addon-direct.js  app.pure.test.ts  app.test.ts  app.test.ts.bak  client.test.ts  tsconfig.json
node-api/test/cli/: cli.overrides.test.ts
node-api/test/golden/: README.md  golden.test.ts
node-api/test/services/filaments-profile/: filaments-profile.test.ts
node-api/test/services/healthcheck/: healthcheck.test.ts
node-api/test/services/printer-profiles/: printer-profiles.test.ts
node-api/test/services/profile-converter/: profile-converter.test.ts
reports/: 00_resumo_consolidado.md  01_objectivos.md  02_arquitetura_inicial.md  03_pesquisa_fontes.md  04_backlog_milestones.md  05_stack_tecnologica_api.md  06_infra_fila_storage.md  07_portabilidade_cross_platform.md  08_pros_contras_resumo.md  09_integracao_core_algoritmos.md  10_pesquisa_referencias_externas.md  11_recursos_orcaslicer_v2_3_0.md  plano_implementacao_arranjo_orca.md
reports/lixo/: 00_resumo_consolidado_OLD.md  05_stack_tecnologica_api_OLD.md
scripts/: build.sh  compare-text.js  slice-3mf.js
scripts/ci/: build_cli_image.sh  build_core_image.sh  build_deps_image.sh  check_image_exists.sh  compute_orca_sha.sh  derive_meta.sh  linux_build_inside_docker.sh  list_staged_prebuilds.sh  skip_linux_due_to_existing_deps.sh
scripts/dev/: run-node-api-dev.sh
test_files/: README.md  test_3mf.3mf  test_model.stl
vendor_cmake/cmake-3.29.8-macos-universal/CMake.app/Contents/: CodeResources  Info.plist
(+2112 files in other folders)
